--- a/css/style.css
+++ b/css/style.css
@@ -1,109 +1,128 @@
-* {
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
+@font-face {
+  font-family: "adamoliver";
+  src: url("../fonts/adamoliver.eot");
+  src: url("../fonts/adamoliver.eot?#iefix") format("embedded-opentype"), url("../fonts/adamoliver.woff") format("woff"),
+    url("../fonts/adamoliver.ttf") format("truetype"), url("../fonts/adamoliver.svg#adamoliver") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    background: #000;
-    color: #fff;
-    font-size: 85%;
-    line-height: 130%;
+  font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  background: #fafafa;
 }
 
-header, nav {
-    width:50%;
-    float:left;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  max-width: 80vw;
+  padding: 0 1rem;
 }
 
-.banner {
-    background:#000 url(../images/banner.jpg) no-repeat center top;
-    height: 100%;
+.item {
+  max-width: 500px;
 }
 
-.wrap {
-    background: #000;
-    border-top: 10px solid #fff;
-    border-bottom: 10px solid #fff;
-    box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.3);
-    width: 100%;
-    position: fixed;
-    top: 50%;
-    margin-top: -140px;
+h1 {
+  font-weight: 500;
+  margin: 0.5rem 0;
+  font-size: 5rem;
+  line-height: 1;
 }
 
-.content {
-    max-width: 800px;
-    min-width: 500px;
-    margin: 0 auto;
-    padding: 60px 20px 75px 20px;
-    font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
-}
-
-.content h1,
-.content h2 {
-    font-weight: 300;
-    text-transform: lowercase;
-}
-
-.content h1 {
-    font-weight: 300;
-    font-size: 4.2em;
-    line-height: 1.2em;
-}
-
-.content h2 {
-    color: #4bb1ca;
-    font-size: 1.5em;
+p {
+  margin: 0.5rem 0;
+  color: #888888;
+  font-weight: 300;
+  font-size: 2.5rem;
 }
 
 .social {
-    float: right;
-    margin: 33px 0 0;
-    font-size: 1.5em;
+  list-style-type: none;
+  margin: 1.5rem 0 0 0;
+  padding: 0;
+  font-size: 1.5rem;
+  display: flex;
+  font-size: 1rem;
 }
 
 .social li {
-    display: inline-block;
-    list-style: none;
+  line-height: 35px;
+  text-align: center;
+  color: #fff;
+  margin: 0 1rem 0 0;
 }
 
 .social a {
-    background: #fff;
-    color: #000;
-    border-radius: 20px;
-    width: 34px;
-    height: 34px;
-    display: inline-block;
-    margin: 0 5px 0;
-    -webkit-transition: 0.2s ease-in;
-    -moz-transition: 0.2s ease-in;
-    -o-transition: 0.2s ease-in;
-    transition: 0.2s ease-in;
+  transition: 0.3s background;
+  background: #ddd;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: block;
+  text-decoration: none;
 }
 
 .social a:hover {
-    background: #000;
-    color: #fff;
+  color: #333;
 }
 
 .social i {
-    padding: 7px;
+  color: #fff;
 }
 
-.social i.fa-camera {
-    padding-left: 6px;
-    padding-right: 6px;
+.icon-photo:hover {
+  background-color: #bd3518;
 }
 
-.social i.fa-linkedin {
-    padding-left: 9px;
-    padding-right: 9px;
+.icon-facebook:hover {
+  background-color: #3b5998;
+}
+
+.icon-twitter:hover {
+  background-color: #33ccff;
+}
+
+.icon-strava:hover {
+  background-color: #f56505;
+}
+
+.icon-github:hover {
+  background-color: #0590b8;
+}
+
+.icon-linkedin:hover {
+  background-color: #007bb7;
+}
+
+[class^="ico-"]:before,
+[class*=" ico-"]:before {
+  font-family: "adamoliver" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.ico-github-alt:before {
+  content: "\61";
+}
+.ico-twitter:before {
+  content: "\62";
+}
+.ico-linkedin:before {
+  content: "\63";
+}
+.ico-camera:before {
+  content: "\64";
+}
+.ico-bicycle:before {
+  content: "\65";
 }
