--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .item {
-  max-width: 500px;
+  max-width: 600px;
 }
 
 h1 {
@@ -33,11 +33,38 @@ h1 {
   line-height: 1;
 }
 
-p {
+a {
+  transition: 0.3s color;
+  text-decoration: none;
+  color: #888888;
+}
+
+a:hover {
+  color: #222;
+}
+
+.roles {
+  list-style-type: none;
   margin: 0.5rem 0;
   color: #888888;
   font-weight: 300;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
+  padding: 0;
+}
+
+.roles li {
+  display: inline;
+}
+
+.roles li:before {
+  content: "/";
+  padding-right: 1rem;
+  padding-left: 0.5rem;
+  opacity: 0.5;
+}
+
+.roles li:first-child:before {
+  content: "";
 }
 
 .social {
@@ -63,7 +90,6 @@ p {
   height: 2rem;
   border-radius: 50%;
   display: block;
-  text-decoration: none;
 }
 
 .social a:hover {
